Fix inconsistencies in sticky header font-size and spacing
* Ensure 8px spacing between all icons and buttons
* Move buttons to separate container, so they aren't
  grouped with -icons.
* Reducing horizontal padding of quiet labelled buttons
  to 5px to match spec.

Bug: T326571

--- a/resources/skins.vector.styles/components/StickyHeader.less
+++ b/resources/skins.vector.styles/components/StickyHeader.less
@@ -45,6 +45,7 @@
 	&-start,
 	&-end,
 	&-icons,
+	&-buttons,
 	&-context-bar {
 		display: flex;
 		align-items: center;
@@ -86,10 +87,21 @@
 		}
 	}
 
-	&-icons {
+	&-end {
 		font-size: @font-size-sticky-header-links;
-		// T323176 Apply additional spacing between icon buttons
+	}
+
+	&-end,
+	&-icons,
+	&-buttons {
+		// Spacing between buttons
 		column-gap: 8px;
+	}
+
+	&-buttons > .mw-ui-quiet {
+		// All quiet buttons, even those with labels, should have 5px horizontal padding
+		// TODO: Move this fix upstream?
+		padding: 5px;
 	}
 
 	.vector-search-box {
